--- a/_UE14Projects/UE142023-S05-SAF.md
+++ b/_UE14Projects/UE142023-S05-SAF.md
@@ -1,5 +1,5 @@
 ---
-name: Les carburants durables pour l'aviation : quel potentiel pour décarboner le secteur ?
+name: Les carburants durables pour l'aviation - quel potentiel pour décarboner le secteur ?
 number: "05"
 year: 2023
 Encadrant: Aurélien Bigo
