--- a/_UE14Projects/UE142023-S12-acier.md
+++ b/_UE14Projects/UE142023-S12-acier.md
@@ -1,5 +1,5 @@
 ---
-name: Production d\'acier bas carbone : comparaison des procédés DRI et Electrowinning
+name: Production d'acier bas carbone - comparaison des procédés DRI et Electrowinning
 number: "14"
 year: 2023
 Encadrant: Quentin Raillard
