--- a/_UE14Projects/UE142023-S14-mines2.md
+++ b/_UE14Projects/UE142023-S14-mines2.md
@@ -1,5 +1,5 @@
 ---
-name: Industrie minière et transition énergétique : quelle place des initiatives multi-parties prenantes dans la sécurisation des approvisionnements et dans la responsabilisation des acteurs des chaines de valeur?
+name: Industrie minière et transition énergétique - initiatives multi-parties prenantes.
 number: "14"
 year: 2023
 Encadrant: Olivier Dubourdieu
