--- a/_UE14Projects/UE142023-S22-ve.md
+++ b/_UE14Projects/UE142023-S22-ve.md
@@ -1,12 +1,12 @@
 ---
-name: Effets de la taille des batteries (capacité énergétique) sur l\'autonomie des véhicules électriques
+name: Effets de la taille des batteries (capacité énergétique) sur l'autonomie des véhicules électriques
 number: "22"
 year: 2023
 Encadrant: Arthur Clerjon
 ---
 
 
-## Effets de la taille des batteries (capacité énergétique) sur l\'autonomie des véhicules électriques.
+## Effets de la taille des batteries (capacité énergétique) sur l'autonomie des véhicules électriques.
 
 (Encadrant : Arthur Clerjon CEA)
 
