--- a/_UE14Projects/UE142023-S24-foret.md
+++ b/_UE14Projects/UE142023-S24-foret.md
@@ -1,5 +1,5 @@
 ---
-name: Forêt Française en 2050 : Quelle trajectoire compatible avec les objectifs climatiques et énergétiques ?
+name: Forêt Française en 2050 - Quelle trajectoire compatible avec les objectifs climatiques et énergétiques ?
 number: "24"
 year: 2023
 Encadrant: Florin Malafosse
