--- a/_UE14Projects/UE142023-S09-EUH2.md
+++ b/_UE14Projects/UE142023-S09-EUH2.md
@@ -2,7 +2,7 @@
 name: Évaluer le besoin en Hydrogène en Europe à l'horizon 2050
 number: "09"
 year: 2023
-Encadrant: Quentin Raillard
+Encadrant: Thibaut Knibiehly
 ---
 
 ## Évaluer le besoin en Hydrogène en Europe à l\'horizon 2050
