--- a/_UE14Projects/UE142025-S34.md
+++ b/_UE14Projects/UE142025-S34.md
@@ -30,7 +30,7 @@ Malheureusement, freiner aujourd'hui ces développements pourrait donner
 un coût d'arrêt à une industrie qui a besoin de continuité, et entraîner
 des difficultés sur le long terme : mettre hors d'atteinte nos objectifs
 de décarbonation de long terme et rendre plus difficile préparation à
-l'arrivée en fin de vie du parc nucléaire actuel ("l'effet falaise".
+l'arrivée en fin de vie du parc nucléaire actuel ("l'effet falaise").
 
 L'objectif de ce projet sera tout d'abord de comprendre les causes du
 non démarrage de l'électrification et les solutions pour accélérer.
@@ -40,4 +40,4 @@ l'électrification. Enfin, on cherchera à comprendre et exposer les
 difficultés que pourraient poser sur le long terme un coût d'arrêt du
 développement des renouvelables.
 
-### Contacts :
+### Contacts : robin.girard@minesparis.psl.eu
