--- a/_UE14Projects/UE142025-S12-CO2.md
+++ b/_UE14Projects/UE142025-S12-CO2.md
@@ -1,5 +1,5 @@
 ---
-name: Qu\'attendre de la géothermie dans la transition énergétique ?
+name: Disponibilité du stockage de CO2 et déploiement des infrastructures CCUS
 number: "12"
 year: 2025
 Encadrant: Maria Berchiche
